--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
 	</head>
 	<body>
 		<div class="deck-container">
-			<section class="slide">
-				<img src="assets/logo.png" width="768" height="768" alt="Entre Devs Frontend">
+			<section class="slide" style="display: flex; align-items: center; justify-content: center;">
+				<img src="assets/logo.png" width="571" height="227" alt="Entre Devs Frontend">
 			</section>
 
 			<section class="slide">
