Adiciona link para o repositório de exemplos

--- a/index.html
+++ b/index.html
@@ -138,6 +138,7 @@ E a lista continua...
 			<section class="slide">
 				<h2>Tá legal, mas cadê o código</h2>
 				<img src="assets/show-me-the-code.gif" width="480" height="354" alt="Show me the code">
+				<p><a href="https://github.com/josielrocha/entredevs-presentation" title="Código utilizado para demonstração">https://github.com/josielrocha/entredevs-presentation</a></p>
 			</section>
 
 			<section class="slide">
